--- a/roles/vpn_server/tasks/start-vpn-server.yml
+++ b/roles/vpn_server/tasks/start-vpn-server.yml
@@ -1,4 +1,10 @@
 ---
+- name: Copy sqvpn-start.sh script file
+  template:
+    src: sqvpn-start.sh.j2
+    dest: "/usr/local/bin/sqvpn-start.sh"
+    mode: 0755
+
 - name: Copy sqvpn service file
   template:
     src: sqvpn.service.j2
