--- a/hosts.yml
+++ b/hosts.yml
@@ -3,3 +3,9 @@ all:
   hosts: 192.168.1.103
   vars:
     ansible_user: "ubuntu"
+    vpn_server_ip: 192.168.1.103
+    vpn_server_port: 9999
+    allowed_ips: 10.10.10.0
+    cidr: 24
+    server_ip: 10.10.10.1
+    client_ip: 10.10.10.2
