--- a/roles/vpn_server/tasks/generate-server-keys.yml
+++ b/roles/vpn_server/tasks/generate-server-keys.yml
@@ -1,11 +1,11 @@
 ---
-- name: Generate VPN server private key
+- name: Generate VPN server secret key
   command: sqvpn genkey server.vpn-secret
   args:
     chdir: /var/opt/sqvpn
     creates: /var/opt/sqvpn/server.vpn-secret
 
-- name: Generate VPN server public key
+- name: Extract VPN server public key
   command: sqvpn pubkey server.vpn-secret server.vpn-public
   args:
     chdir: /var/opt/sqvpn
