--- a/roles/vpn_server/tasks/setup-vpn-server.yml
+++ b/roles/vpn_server/tasks/setup-vpn-server.yml
@@ -9,7 +9,7 @@
     name: sqvpn-server
     enabled: no
 
-- name: Stopped service sqvpn-server
+- name: Stop service sqvpn-server
   service:
     name: sqvpn-server
     state: stopped
