modified:   hosts.yml

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,7 +1,7 @@
 ---
 all:
   vars:
-    ansible_user: "ubuntu"
+    ansible_user: ubuntu
     vpn_server_ip: 192.168.1.103
     vpn_server_port: 9999
     allowed_ips: 10.10.10.0
